# FInCoR

./: .gitignore  README.md
bayes_people_tracker/config/: detectors.yaml
bayes_people_tracker/include/people_tracker/: simple_tracking.h
bayes_people_tracker/src/people_tracker/: people_tracker.cpp
camera_setup/config/: previous_transform.yaml
camera_setup/launch/: start_cameras.launch
camera_setup/parameters/: previous_transform.yaml
camera_setup/src/: multi_cam_calibration.py
circle_detection/: CMakeLists.txt  package.xml
circle_detection/include/: FindCircle.h
circle_detection/launch/: multi_cam_circle_detection.launch
circle_detection/msg/: STrackedObject.msg  detection_results.msg
circle_detection/src/: CTransformation.cpp  FindCircle.cpp
object_detection/msg/: location.msg
object_detection/parameters/: colourFilters.yaml
src/bayes_people_tracker/config/: detectors.yaml
src/bayes_people_tracker/include/people_tracker/: people_tracker.h
src/bayes_people_tracker/src/people_tracker/: people_tracker.cpp
src/bayestracking-master/include/bayes_tracking/: models.h
src/camera_setup/: CMakeLists.txt  package.xml
src/camera_setup/launch/: start_cameras.launch
src/camera_setup/parameters/: colourFilters.yaml  previous_transform.yaml
src/camera_setup/src/: calibrate.cpp  camera.py  multi_cam_calibration.py
src/circle_detection/: CMakeLists.txt  package.xml
src/circle_detection/config/: detectors.yaml  to_pose_array.yaml
src/circle_detection/launch/: bayes_tracking.launch  multi_cam_circle_detection.launch
src/circle_detection/msgs/: STrackedObject.msg
src/circle_detection/src/: CCircleDetect.cpp  CTransformation.cpp  FindCircle.cpp  generate_circle.py
src/detector_msg_to_pose_array/scripts/: to_pose_array.py
src/object_detection/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/object_detection/launch/: object_dection.launch
src/object_detection/src/: CMT_ROS.py  cal.cpp  calibrate (copy).cpp  calibrate.cpp  colourFilter.py  getImages.py  scroll.py  tutorial_test.cpp
src/object_detection/src/backup/: cal.cpp  calibrate.cpp
src/object_detection/src/scitos_docking/src/scitos_docking/: docking.cpp
src/scitos_docking/: CMakeLists.txt  package.xml
src/scitos_docking/src/scitos_docking/: docking.cpp
